# cask

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  linux-simple-builds.yml  ubuntu.yml  windows-simple-builds.yml
docs/: getting-started.md  index.md  user-guide.md
getting-started/: index.html
search/: search_index.json
src/: main.cpp
src/commands/: add.cpp  add.hpp  build.cpp  build.hpp  help.cpp  help.hpp  new.cpp  new.hpp  new.test.cpp  run.cpp  run.hpp
src/utils/: fs.hpp  macro_scope.hpp  opts.cpp  opts.hpp  std_fs.hpp
tests/src/commands/: unit-build.cpp  unit-new.cpp  unit-run.cpp
tests/src/utils/: unit-std_fs.cpp
user-guide/: index.html
